InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/fields/vlocity_ins__AssessmentDateFormat__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AssessmentDateFormat__c</fullName>
    <formula>vlocity_ins__AssessmentId__r.vlocity_ins__DateFormat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Date Format</label>
    <type>Text</type>
</CustomField>