InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/fields/vlocity_ins__AssessmentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AssessmentId__c</fullName>
    <label>Assessment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>vlocity_ins__Assessment__c.vlocity_ins__IsTemplate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_ins__Assessment__c</referenceTo>
    <relationshipLabel>Assessment Questions</relationshipLabel>
    <relationshipName>AssessmentQuestions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>