InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/fields/vlocity_ins__IsTemplateQuestion__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsTemplateQuestion__c</fullName>
    <formula>vlocity_ins__AssessmentId__r.vlocity_ins__IsTemplate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Template Question</label>
    <type>Checkbox</type>
</CustomField>