InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/fields/vlocity_ins__ParentAssessmentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ParentAssessmentId__c</fullName>
    <formula>vlocity_ins__ParentQuestion__r.vlocity_ins__AssessmentId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentAssessmentId</label>
    <type>Text</type>
</CustomField>