InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/fields/vlocity_ins__Scorable__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Scorable__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Indicates whether this Question in the Assessment will receive a score.</inlineHelpText>
    <label>Scorable</label>
    <type>Checkbox</type>
</CustomField>