InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/fields/vlocity_ins__SelectType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__SelectType__c</fullName>
    <label>Select Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Radio Button</fullName>
                <default>true</default>
                <label>Radio Button</label>
            </value>
            <value>
                <fullName>Dropdown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>