InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/fields/vlocity_ins__Weight__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Indicates whether a Question is weighted more (i.e. 1.5) or less (i.e. 0.75) when scoring the Assessment.</inlineHelpText>
    <label>Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>