InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/recordTypes/vlocity_ins__Checkbox.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Checkbox</fullName>
    <active>true</active>
    <label>Checkbox</label>
</RecordType>