InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/recordTypes/vlocity_ins__Date.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Date</fullName>
    <active>true</active>
    <label>Date</label>
</RecordType>