InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/recordTypes/vlocity_ins__FreeText.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__FreeText</fullName>
    <active>true</active>
    <label>Free Text</label>
</RecordType>