InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/recordTypes/vlocity_ins__Instruction.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Instruction</fullName>
    <active>true</active>
    <label>Instruction</label>
</RecordType>