InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/recordTypes/vlocity_ins__MultiSelect.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__MultiSelect</fullName>
    <active>true</active>
    <label>Multi Select</label>
</RecordType>