InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/recordTypes/vlocity_ins__Number.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Number</fullName>
    <active>true</active>
    <label>Number</label>
</RecordType>