InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/recordTypes/vlocity_ins__QuestionTableMultiSelect.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__QuestionTableMultiSelect</fullName>
    <active>true</active>
    <label>Question Table Multi Select</label>
</RecordType>