InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/recordTypes/vlocity_ins__QuestionTableSingleSelect.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__QuestionTableSingleSelect</fullName>
    <active>true</active>
    <label>Question Table Single Select</label>
</RecordType>