InsuranceOrg/force-app/main/default/objects/vlocity_ins__AssessmentQuestion__c/recordTypes/vlocity_ins__SingleSelect.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__SingleSelect</fullName>
    <active>true</active>
    <label>Single Select</label>
</RecordType>